# HuaweiFirmwareTool

./: -h  .flake8  .gitattributes  .gitignore  .pylintrc  ANALISIS_ES.md  ANALISIS_EXE.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  EG8145V5_ANALYSIS.md  EXE_ANALYSIS_REPORT.md  FIRMWARE_CONFIGS.md  FIRMWARE_PACKAGES.md  FIRMWARE_UPDATER_README.md  IMPLEMENTATION_NOTES.md  MEGACABLE_GUIDE.md  ONT_EXE_ANALYSIS.md  README.md  README_ENHANCED.md  analyze_firmware.sh  compat_getopt.h  conftest.py  extract_firmware_packages.py  firmware_update_checker.py  hw_config_decrypt.py  hw_firmware_tool.py  hw_flash.cpp  hw_su_challenge.py  launcher.py  modify_pkg3.py  pyproject.toml  pytest.ini  quick_repack.sh  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  run_obsc_tool.py  translate_ont_tool.py  (+5 more)
.github/: copilot-instructions.md
configs/: README.md
cpp/: CMakeLists.txt  compat_getopt.h  hw_fmw.cpp  util_hw.cpp  util_hw.hpp  util_rsa.cpp  util_rsa.hpp
cpp/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  hw_fmw  hw_sign  hw_verify
cpp/cmake/: toolchain-aarch64-clang.cmake  toolchain-aarch64-linux.cmake
cpp/tools/: README.md
decompiled/: CLI_SECURITY_ANALYSIS.md  CMakeLists.txt  DECOMPILE_FULL_REPORT.md  DECOMPILE_REPORT.md  README.md  ROOTFS_BINARIES_REPORT.md  firmware_binary_list.txt  firmware_binary_usage.txt
decompiled/ConvertLog2Dst/: ConvertLog2Dst.c
decompiled/aescrypt2/: CMakeLists.txt  aes.c  aes.h  aescrypt2.c  exports.txt  full_disasm.asm  functions.txt  hw_ssp_aescrypt.c  hw_ssp_aescrypt.h  imports.txt  info.txt  key_strings.txt
decompiled/arm_binaries/: binary_analysis_report.txt
decompiled/arm_binaries/Huawei-HG8145V5_Claro-RD_Unlock_HGONTV500/: cfgtool
decompiled/arm_binaries/Huawei-HG8145V5_Telmex_Unlock_Firmware_TELMEX_R020_NEW/: aescrypt2
decompiled/arm_binaries/Huawei-HG8245W5_Claro-Argentina_General_HG8245W5_R20_ACLARO_ARGENTINA/: cfgtool
decompiled/athtestcmd/: efuse_strings.txt  full_disasm.asm
decompiled/backupKey/: backupKey.c
decompiled/busybox_stub/: busybox_stub.c
decompiled/cfgtool/: cfgtool.c  cfgtool_xml.c  cfgtool_xml.h  exports.txt  full_disasm.asm  functions.txt  hw_cfg_tool.h  imports.txt  info.txt
decompiled/clid/: clid.c
decompiled/cmake/: mingw-w64-x86_64.cmake
decompiled/cominfo/: cominfo.c
decompiled/efuse/: dm_key.c  dm_key.h  hal_efuse.c  hal_efuse.h
decompiled/getfilecrc/: getfilecrc.c
decompiled/hw_qoe_getloid/: hw_qoe_getloid.c
decompiled/hw_qoe_tools/: decrypt_boardinfo.c  decrypt_prvtkey.c  hw_qoe_getpppaccount.c  keyfilemng.c  kmc_tool.c  setboardinfo.c
decompiled/libhw_smp_dm_pdt/: efuse_strings.txt  full_disasm.asm  key_exports.txt
decompiled/libhw_smp_dm_pdt_so/: HW_DM_ClearEfuseFlash.asm  HW_DM_RPC_GetEfuseInfo.asm  HW_DM_RPC_SetEfuseLoad.asm  efuse_key_functions.asm
decompiled/libhw_ssp_basic/: HW_AES_GetCBCKey.asm  HW_KMC_GetActiveKey.asm  HW_KMC_GetAppointKey.asm  HW_OS_GetSaltStrForPbkdf2.asm  HW_OS_PBKDF2_SHA256.asm  exports.txt  full_disasm.asm  imports.txt  key_strings.txt
decompiled/libhw_ssp_basic_so/: info.txt
decompiled/libhw_ssp_ssl/: exports.txt  full_disasm.asm  imports.txt  key_strings.txt
decompiled/libhw_ssp_ssl_so/: full_disasm.asm  key_functions.asm
decompiled/libhw_swm_dll/: efuse_strings.txt  exports.txt  full_disasm.asm  imports.txt  key_exports.txt  key_strings.txt
decompiled/libhw_swm_dll_so/: HW_SWM_CheckEfuseSig.asm  HW_SWM_Deal_Efuse.asm  HW_SWM_EfuseSigCheckCore.asm  HW_SWM_EfuseSigCheckInner.asm  HW_SWM_GetEfuseBuffer.asm  HW_SWM_LoadEfuse.asm  efuse_key_functions.asm  full_analysis.txt  functions.txt  info.txt
decompiled/libpolarssl/: exports.txt  full_disasm.asm  imports.txt  key_strings.txt
decompiled/libpolarssl_so/: all_key_functions.asm  info.txt  mbedtls_pk_parse_key.asm  mbedtls_pk_parse_keyfile.asm  mbedtls_pkcs5_pbkdf2_hmac.asm  polarssl_pem_read_buffer.asm  polarssl_set_pub_prv_to_conf.asm
decompiled/libsmp_api/: efuse_strings.txt  full_disasm.asm  key_exports.txt
decompiled/libsmp_api_so/: HW_DM_GetEncryptedKey.asm  HW_DM_GetRootPubKeyFile.asm  HW_DM_GetRootPubKeyInfo.asm  HW_SWM_GetEncryptedAesKey.asm  efuse_key_functions.asm
decompiled/libwlan_aes_crypto/: exports.txt  full_disasm.asm  imports.txt  key_strings.txt
decompiled/libwlan_aes_crypto_so/: full_analysis.txt  functions.txt  info.txt
decompiled/ontinfo/: ontinfo.c
decompiled/shellconfig/: shellconfig.c
decompiled/stubs/: hw_os_stubs.c  hw_os_stubs.h
decompiled/wlan_aes/: wlan_aes_crypto.c  wlan_aes_crypto.h
docs/: API.md  ARCHITECTURE.md  DESBLOQUEIO_RAR_ANALYSIS.md  DEVELOPMENT.md  ONT_V100R002C00SPC253_ANALYSIS.md  REFACTORING_SUMMARY.md
examples/: README.md  complete_workflow.sh
extracted/: EG8145V5_ROOTFS_ANALYSIS.md  ENCRYPTION_ANALYSIS.md  TAR_EXTRACT_REPORT.md  tar_extract_report.json
extracted_configs/: CONFIG_ANALYSIS.md  README.md  unified_config.xml
extracted_rootfs/: README.md
firmware_packages/: huawei_root_ca_pubkey.pem
firmware_tool/: __init__.py  example_modern_app.py  firmware.py  main.py  network.py  presets.py  splash.py
hwflash/: __init__.py  _version.py  crypto.py  main.py  requirements.txt  splash.py  utils.py
keys/: DEEP_ANALYSIS.md  HOW_TO_DECRYPT_EFUSE.md  KEY_ANALYSIS.md  README.md  found_keys.txt  huawei_ca_cert.pem  huawei_code_signing_cert.pem  huawei_pubkey_0.pem  huawei_pubkey_1.pem  huawei_pubkey_2.pem  huawei_pubkey_3.pem  huawei_pubkey_4.pem  huawei_pubkey_5.pem  nand_encrypted_key_10_vol9_0x1b3e0d1.decrypted.pem  nand_encrypted_key_10_vol9_0x1b3e0d1.pem  nand_encrypted_key_1_vol9_0x591487.pem  nand_encrypted_key_2_vol9_0x78f41f.pem  nand_encrypted_key_6_vol9_0x1691d0f.pem
obsc_tool/: README.md  __init__.py  config_crypto.py  crypto.py  example_modern_app.py  firmware.py  main.py  network.py  presets.py  protocol.py  requirements.txt  splash.py  terminal.py  utils.py
ont-flasher-gui/: .gitignore  CHANGELOG.md  LICENSE  README.md  build_exe.py  requirements.txt  version_info.txt
ont_tool/: ONTTool.spec  README.md  main.py  requirements.txt
(+1152 files in other folders)
