[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsc-firmware-tool"
version = "1.0.0"
description = "Open-source Huawei ONT firmware flasher (OBSC/HWNP protocol)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "HuaweiFirmwareTool Contributors" },
]
keywords = ["huawei", "ont", "firmware", "obsc", "hwnp", "flash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "ttkbootstrap>=1.10",
    "pyserial>=3.5",
    "pycryptodome>=3.19.1",
    "psutil>=5.9",
    "netifaces>=0.11",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
full = [
    "Pillow>=10.2",
    "customtkinter>=5.2",
    "darkdetect>=0.8",
    "sv-ttk>=2.6",
    "ttkthemes>=3.2",
    "pyperclip>=1.8",
    "colorama>=0.4",
    "rich>=13.0",
    "screeninfo>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
obsc-tool = "obsc_tool.main:main"

[project.urls]
Repository = "https://github.com/Uaemextop/HuaweiFirmwareTool"

[tool.setuptools.packages.find]
include = ["obsc_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["obsc_tool"]
omit = ["obsc_tool/gui/*", "obsc_tool/main.py", "obsc_tool/splash.py"]
