[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huawei-firmware-tool"
version = "1.0.0"
description = "Tools for modifying and flashing firmware to Huawei ONT devices via OBSC protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Unlicense"}
authors = [
    {name = "HuaweiFirmwareTool Contributors"}
]
keywords = ["huawei", "firmware", "ont", "obsc", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
]

dependencies = [
    # Core UI
    "ttkbootstrap>=1.10,<2.0",
    "Pillow>=10.3.0,<11.0",  # Security: Fixed buffer overflow (CVE-2024-28219)
    "customtkinter>=5.2,<6.0",

    # UI themes & styling
    "darkdetect>=0.8,<1.0",
    "sv-ttk>=2.6,<3.0",
    "ttkthemes>=3.2,<4.0",

    # UI widgets & helpers
    "CTkMessagebox>=2.7,<3.0",
    "CTkToolTip>=0.8,<1.0",
    "tktooltip>=0.1,<1.0",
    "tkinterdnd2>=0.4,<1.0",
    "ttkwidgets>=0.13,<1.0",

    # System tray & screen
    "pystray>=0.19,<1.0",
    "screeninfo>=0.8,<1.0",

    # Charts & visualization
    "matplotlib>=3.8,<4.0",
    "qrcode>=7.4,<8.0",
    "colour>=0.1,<1.0",

    # Terminal & serial
    "pyserial>=3.5,<4.0",

    # System & network info
    "psutil>=5.9,<6.0",
    "netifaces>=0.11,<1.0",

    # Clipboard & notifications
    "pyperclip>=1.8,<2.0",
    "plyer>=2.1,<3.0",

    # Cryptography
    "pycryptodome>=3.19.1,<4.0",

    # File format helpers
    "chardet>=5.0,<6.0",
    "defusedxml>=0.7,<1.0",

    # Logging & export
    "colorama>=0.4,<1.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-mock>=3.12,<4.0",
    "mypy>=1.8,<2.0",
    "pylint>=3.0,<4.0",
    "flake8>=7.0,<8.0",
    "black>=24.0,<25.0",
    "isort>=5.13,<6.0",
]
build = [
    "pyinstaller>=6.0,<7.0",
]

[project.scripts]
obsc-tool = "obsc_tool.main:main"
huawei-firmware = "obsc_tool.main:main"

[project.urls]
Homepage = "https://github.com/Uaemextop/HuaweiFirmwareTool"
Repository = "https://github.com/Uaemextop/HuaweiFirmwareTool"
Issues = "https://github.com/Uaemextop/HuaweiFirmwareTool/issues"

[tool.setuptools]
packages = ["obsc_tool", "obsc_tool.gui"]

[tool.setuptools.package-data]
obsc_tool = ["*.txt", "*.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=obsc_tool",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["obsc_tool"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0902",  # Too many instance attributes
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "W0212",  # Access to protected member
    "W0511",  # TODO comments
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 20
max-locals = 20
